<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Microchip WCM</string>
    <string name="wta_attribution_url">http://www.willowtreeapps.com/?utm_source=com.microchip.android&amp;utm_medium=android&amp;utm_campaign=attribution</string>

    <string name="font_roboto_medium">Roboto-Medium.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>

    <string name="drawer_open">Console</string>
    <string name="drawer_close">Microchip WCM</string>

    <string name="microchip_circle">Microchip Circle</string>
    <string name="label_buttons">Buttons</string>
    <string name="label_s1">S1</string>
    <string name="label_s2">S2</string>
    <string name="label_s3">S3</string>
    <string name="label_s4">S4</string>
    <string name="label_buttons_s">S</string>
    <string name="label_leds">LEDs</string>
    <string name="label_d">D</string>
    <string name="label_d1">D1</string>
    <string name="label_d2">D2</string>
    <string name="label_d3">D3</string>
    <string name="label_d4">D4</string>
    <string name="potentiometer">Potentiometer</string>
    <string name="device_configuration">Device Configured</string>
    <string name="device_configuring">Configuring Device</string>
    <string name="device_not_configured">Device Not Configured Correctly</string>
    <string name="device_no_network">Connection Error</string>

    <string name="menu_delete">delete</string>
    <string name="menu_settings">settings</string>

    <string name="settings">Settings</string>
    <string name="settings_device_info">Device Information</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_server_address_no_valid">Not a valid url</string>
    <string name="settings_device_uuid">Device UUID</string>
    <string name="settings_server_trust">Server Trust</string>
    <string name="settings_ignore_error">Ignore Errors</string>
    <string name="settings_wta_attribution">WillowTreeApps attribution</string>
    <string name="email_subject">WCM request summary</string>

</resources>
